# pythia

./: .gitignore  ARISTOTLE_PROMPT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kairos.lean  Pythia.lean  README.md  ROADMAP.md  aristotle-medium-queue.md  lakefile.lean  pyproject.toml  tier2-audit-amend.lean.txt
.githooks/: pre-push
.github/workflows/: actionlint.yml  aristotle-restock.yml  dep-graph-refresh.yml  lean-build.yml  md-lint.yml  mutation-tests.yml  pr-template-check.yml  pythia-sim.yml
Kairos/Stats/: API.lean  AristotleT0T1T2Bench.lean  AxiomAudit.lean  BenchDefs.lean  Bernstein.lean  BernsteinTest.lean  BettingCS.lean  DeploymentDesign.lean  ElegantUnification.lean  EquivalenceBreak.lean  GaussianRandomWalk.lean  GaussianSmallBall.lean  HowardRamdasCS.lean  InformationTheoretic.lean  InputQuantization.lean  MatchingConstants.lean  MatrixBernstein.lean  NewTargetsStubs.lean  PhiTransform.lean  PowerAnalysis.lean  Quantization.lean  SPRT.lean  Sharpness.lean  StoppingRule.lean  SubGaussianMG.lean  VectorSharpness.lean  VilleMathlibPR.lean  VilleSupermartingale.lean  WaldIdentity.lean
Pythia/: API.lean  Actuarial.lean  AristotleT0T1T2Bench.lean  AxiomAudit.lean  BDG.lean  Basic.lean  BenchDefs.lean  BenchTargets.lean  Bernstein.lean  BernsteinIID.lean  BernsteinTest.lean  BettingCS.lean  BettingStrategy.lean  Bio.lean  Chemistry.lean  DeploymentDesign.lean  Distributed.lean  EDetector.lean  ElegantUnification.lean  EquivalenceBreak.lean  FreedmanMaximal.lean  GaussianRandomWalk.lean  GaussianSmallBall.lean  Hardware.lean  HowardRamdasCS.lean  InformationTheoretic.lean  InformationTheory.lean  InputQuantization.lean  Lookup.lean  MGFBoundedSubGamma.lean  MasterLowerBound.lean  MasterUpperBound.lean  MatchingConstants.lean  MathlibTags.lean  MatrixBernstein.lean  MatrixBernsteinFull.lean  MatrixLieb.lean  MechanismDesign.lean  Networking.lean  Neuroscience.lean  (+15 more)
Pythia/Actuarial/: LogNormal.lean  Pareto.lean  Test.lean  Weibull.lean
Pythia/Asymptotics/: DeltaMethod.lean  DeltaMethodMulti.lean
Pythia/Bench/: MiniPythia.lean
Pythia/Bio/: Bateman.lean  HillEmax.lean  MichaelisMentenSaturation.lean  Population.lean  SIRFinalSize.lean
Pythia/Chemistry/: Arrhenius.lean  BeerLambert.lean  MassActionConservation.lean
Pythia/Control/: Lyapunov.lean  LyapunovODE.lean
Pythia/Distributed/: Basic.lean  ByzantineQuorum.lean  HappensBefore.lean  PaxosSafety.lean  TwoPCBlocking.lean
Pythia/Economics/: CAPM.lean  CRRA.lean  RiskNeutralCall.lean
Pythia/Engineering/: PowerDissipation.lean
Pythia/Finance/: All.lean  AsianOption.lean  AutocorrelationReturn.lean  BachelierTerminal.lean  BarrierOption.lean  BlackScholesCallClosedForm.lean  CRRBinomialStep.lean  ConcentrationRisk.lean  CreditRisk.lean  CurrencyHedging.lean  DividendDiscountModel.lean  EntropyRisk.lean  Execution.lean  FixedIncome.lean  ForwardRateParity.lean  Fundamentals.lean  GarmanKlassVolatility.lean  HestonLongRunVariance.lean  ItoDiscrete.lean  Kelly.lean  KellyOptimal.lean  KurtosisRisk.lean  LeverageDecay.lean  LogReturnInequality.lean  LookbackOption.lean  MarginalRisk.lean  MarkowitzFrontier.lean  MaxDrawdown.lean  MeanVarianceUtility.lean  MertonCredit.lean  MertonPortfolioInsurance.lean  OptionPayoff.lean  OptionPricing.lean  PortfolioOptimality.lean  PortfolioRebalancing.lean  PortfolioTheory.lean  README.md  RealisedVolatility.lean  RiskManagement.lean  RiskParity.lean  (+5 more)
Pythia/Frontier/: GaussianRandomWalk.lean  GoldenThompsonCommutative.lean  LogSumExp.lean  Lundberg.lean  MatrixBernstein.lean  PeierlsBogoliubov.lean  TraceInequalities.lean  WaldIdentity.lean
Pythia/HFT/: Checksum.lean  FixedPoint.lean  Latency.lean  RiskGate.lean  SPSCQueue.lean
Pythia/Hardware/: ABCSynthesisSoundness.lean  AXIProtocol.lean  AddressDecoder.lean  AreaModel.lean  BMCCompleteness.lean  BitFieldExtract.lean  BitVec.lean  BranchPredictor.lean  BurchDillRefinement.lean  BurchDillUF.lean  BusProtocolSafety.lean  CacheCoherence.lean  ClockGatingCell.lean  CommitOrdering.lean  CompressionMoves.lean  CounterexampleFeedback.lean  CrossbarNonblocking.lean  DFTAndCDC.lean  DMAController.lean  DataIntegrity.lean  DecomposeRecompose.lean  ECC_SECDED.lean  EngineContract.lean  FIFOBackpressure.lean  FIFODepthSizing.lean  FlowControl.lean  FlowInvariants.lean  FormalCoverageMetric.lean  FormalRefinement.lean  GrayCounter.lean  HammingOptProof.lean  IC3PDRSoundness.lean  Interpolation.lean  InterruptSafety.lean  InvariantMining.lean  (+29 more)
crates/pythia-fundamentals-capital/: Cargo.toml
crates/pythia-fundamentals-capital/src/: lib.rs
crates/pythia-fundamentals-capital/tests/: proptest_lean.rs
crates/pythia-hft-fixedpoint/: Cargo.toml
crates/pythia-hft-fixedpoint/benches/: fixedpoint_bench.rs
crates/pythia-hft-fixedpoint/src/: lib.rs
crates/pythia-hft-fixedpoint/tests/: proptest_lean.rs
crates/pythia-hft-marketmaking/: Cargo.toml
crates/pythia-hft-marketmaking/benches/: mm_bench.rs
crates/pythia-hft-marketmaking/src/: lib.rs
crates/pythia-hft-marketmaking/tests/: proptest_lean.rs
crates/pythia-portfolio-riskbudget/: Cargo.toml
crates/pythia-portfolio-riskbudget/src/: lib.rs
crates/pythia-portfolio-riskbudget/tests/: proptest_lean.rs
crates/pythia-risk-portfoliovar/: Cargo.toml
crates/pythia-risk-portfoliovar/src/: lib.rs
crates/pythia-risk-portfoliovar/tests/: proptest_lean.rs
crates/pythia-stochastic-heston/: Cargo.toml
crates/pythia-stochastic-heston/src/: lib.rs
crates/pythia-stochastic-heston/tests/: proptest_lean.rs
demo/: README.md
docs/: concentration_cookbook.md  dep_graph.md  lean_lsp_mcp_setup.md  mutation-tests.md  reflective_oracles.md  sledgehammer_dispatch.md  tutorial.md
examples/: 01_pythia_smoke.lean  02_anytime_valid_smoke.lean  03_cs_families_introspection.lean  05_tight_tail_calculator.lean  06_disprove_smoke.lean  07_cross_prover_smoke.lean  README.md
python/: README.md  pyproject.toml
python/src/athanor_pythia/: __init__.py
tools/: README.md  aristotle_queue.py  check_lean_citation_phantoms.py  md_lint.py  pre-push.sh  theorem_index.py
(+279 files in other folders)
