[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "athanor-pythia"
version = "0.0.1"
description = "Reserved-name placeholder. The real product is the Lean 4 `pythia` tactic + statistics library at https://github.com/athanor-ai/pythia."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Athanor", email = "support@athanor-ai.com" },
]
keywords = ["lean", "lean4", "mathlib", "statistics", "theorem-proving", "anytime-valid", "pythia"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/athanor-ai/pythia"
Repository = "https://github.com/athanor-ai/pythia"
Issues = "https://github.com/athanor-ai/pythia/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/athanor_pythia"]
