[package]
name = "pythia-hft-marketmaking"
version = "0.1.0"
edition = "2021"
description = "Verified market-making primitives: spread, inventory risk, Avellaneda-Stoikov quotes. Lean spec: Pythia.Finance.HFT.MarketMaking"
license = "Apache-2.0"

[dependencies]

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mm_bench"
harness = false
